@@ -1,4 +1,8 @@
-﻿drkns 23.04.2016 01:59:07 +0200 - build 4633
+﻿drkns 23.04.2016 02:03:50 +0200 - build 4634
+
+1. С форума: lua:far.Message"aaa". После закрытия диалога заголовок консоли не восстанавливается.
+
+drkns 23.04.2016 01:59:07 +0200 - build 4633
 
 1. Рефакторинг.
 
